syntax = "proto3";

package calendar;

option go_package = "github.com/romangricuk/otus-go/hw12_13_14_15_calendar/proto;calendar";

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  string start_time = 4;
  string end_time = 5;
  string user_id = 6;
}

message CreateEventRequest {
  string title = 1;
  string description = 2;
  string start_time = 3;
  string end_time = 4;
  string user_id = 5;
}

message UpdateEventRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string start_time = 4;
  string end_time = 5;
  string user_id = 6;
}

message DeleteEventRequest {
  string id = 1;
}

message GetEventRequest {
  string id = 1;
}

message ListEventsRequest {
  string start_time = 1;
  string end_time = 2;
}

message ListEventsResponse {
  repeated Event events = 1;
}

message Notification {
  string id = 1;
  string event_id = 2;
  string user_id = 3;
  string message = 4;
  string time = 5;
}

message CreateNotificationRequest {
  string event_id = 1;
  string user_id = 2;
  string message = 3;
  string time = 4;
}

message UpdateNotificationRequest {
  string id = 1;
  string event_id = 2;
  string user_id = 3;
  string message = 4;
  string time = 5;
}

message DeleteNotificationRequest {
  string id = 1;
}

message GetNotificationRequest {
  string id = 1;
}

message ListNotificationsRequest {
  string start_time = 1;
  string end_time = 2;
}

message ListNotificationsResponse {
  repeated Notification notifications = 1;
}

message Empty {}

service CalendarService {
  rpc CreateEvent(CreateEventRequest) returns (Event);
  rpc UpdateEvent(UpdateEventRequest) returns (Empty);
  rpc DeleteEvent(DeleteEventRequest) returns (Empty);
  rpc GetEvent(GetEventRequest) returns (Event);
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);

  rpc CreateNotification(CreateNotificationRequest) returns (Notification);
  rpc UpdateNotification(UpdateNotificationRequest) returns (Empty);
  rpc DeleteNotification(DeleteNotificationRequest) returns (Empty);
  rpc GetNotification(GetNotificationRequest) returns (Notification);
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);
}
